fix click on general btn & z-index in all carousels

--- a/assets/style/body/carousel-certificates/_carousel-certificates.scss
+++ b/assets/style/body/carousel-certificates/_carousel-certificates.scss
@@ -71,6 +71,7 @@
   }
 
   &-carousel {
+    z-index: 0;
     position: relative;
     max-width: vw(1364);
     margin-inline: auto;
