--- a/assets/style/body/carousel-goods/_carousel-goods.scss
+++ b/assets/style/body/carousel-goods/_carousel-goods.scss
@@ -113,6 +113,7 @@
   }
 
   &-carousel {
+    z-index: 0;
     position: relative;
     max-width: vw(1364);
     margin-inline: auto;
